.metadata/.plugins/org.eclipse.cdt.ui/0322_examen1.build.log
08:56:19 **** Incremental Build of configuration Debug for project 0322_examen1 ****
make -r -j4 all 
Building file: ../source/0322_examen1.c
Building file: ../freertos/source/tasks.c
Building file: ../freertos/source/timers.c
Invoking: MCU C Compiler
Invoking: MCU C Compiler
arm-none-eabi-gcc -D__REDLIB__ -DPRINTF_FLOAT_ENABLE=0 -D__USE_CMSIS -DCR_INTEGER_PRINTF -DSDK_DEBUGCONSOLE=1 -D__MCUXPRESSO -DDEBUG -DSDK_OS_FREE_RTOS -DFSL_RTOS_FREE_RTOS -DCPU_MK64FN1M0VLL12 -DCPU_MK64FN1M0VLL12_cm4 -I"C:\sebmii\SEBMII\0322_examen1\board" -I"C:\sebmii\SEBMII\0322_examen1\source" -I"C:\sebmii\SEBMII\0322_examen1" -I"C:\sebmii\SEBMII\0322_examen1\freertos\include" -I"C:\sebmii\SEBMII\0322_examen1\freertos\portable" -I"C:\sebmii\SEBMII\0322_examen1\drivers" -I"C:\sebmii\SEBMII\0322_examen1\CMSIS" -I"C:\sebmii\SEBMII\0322_examen1\utilities" -I"C:\sebmii\SEBMII\0322_examen1\startup" -O0 -fno-common -g3 -Wall -c -fmessage-length=0 -mcpu=cortex-m4 -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -D__REDLIB__ -specs=redlib.specs -MMD -MP -MF"source/0322_examen1.d" -MT"source/0322_examen1.o" -MT"source/0322_examen1.d" -o "source/0322_examen1.o" "../source/0322_examen1.c"
Invoking: MCU C Compiler
arm-none-eabi-gcc -D__REDLIB__ -DPRINTF_FLOAT_ENABLE=0 -D__USE_CMSIS -DCR_INTEGER_PRINTF -DSDK_DEBUGCONSOLE=1 -D__MCUXPRESSO -DDEBUG -DSDK_OS_FREE_RTOS -DFSL_RTOS_FREE_RTOS -DCPU_MK64FN1M0VLL12 -DCPU_MK64FN1M0VLL12_cm4 -I"C:\sebmii\SEBMII\0322_examen1\board" -I"C:\sebmii\SEBMII\0322_examen1\source" -I"C:\sebmii\SEBMII\0322_examen1" -I"C:\sebmii\SEBMII\0322_examen1\freertos\include" -I"C:\sebmii\SEBMII\0322_examen1\freertos\portable" -I"C:\sebmii\SEBMII\0322_examen1\drivers" -I"C:\sebmii\SEBMII\0322_examen1\CMSIS" -I"C:\sebmii\SEBMII\0322_examen1\utilities" -I"C:\sebmii\SEBMII\0322_examen1\startup" -O0 -fno-common -g3 -Wall -c -fmessage-length=0 -mcpu=cortex-m4 -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -D__REDLIB__ -specs=redlib.specs -MMD -MP -MF"freertos/source/tasks.d" -MT"freertos/source/tasks.o" -MT"freertos/source/tasks.d" -o "freertos/source/tasks.o" "../freertos/source/tasks.c"
arm-none-eabi-gcc -D__REDLIB__ -DPRINTF_FLOAT_ENABLE=0 -D__USE_CMSIS -DCR_INTEGER_PRINTF -DSDK_DEBUGCONSOLE=1 -D__MCUXPRESSO -DDEBUG -DSDK_OS_FREE_RTOS -DFSL_RTOS_FREE_RTOS -DCPU_MK64FN1M0VLL12 -DCPU_MK64FN1M0VLL12_cm4 -I"C:\sebmii\SEBMII\0322_examen1\board" -I"C:\sebmii\SEBMII\0322_examen1\source" -I"C:\sebmii\SEBMII\0322_examen1" -I"C:\sebmii\SEBMII\0322_examen1\freertos\include" -I"C:\sebmii\SEBMII\0322_examen1\freertos\portable" -I"C:\sebmii\SEBMII\0322_examen1\drivers" -I"C:\sebmii\SEBMII\0322_examen1\CMSIS" -I"C:\sebmii\SEBMII\0322_examen1\utilities" -I"C:\sebmii\SEBMII\0322_examen1\startup" -O0 -fno-common -g3 -Wall -c -fmessage-length=0 -mcpu=cortex-m4 -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -D__REDLIB__ -specs=redlib.specs -MMD -MP -MF"freertos/source/timers.d" -MT"freertos/source/timers.o" -MT"freertos/source/timers.d" -o "freertos/source/timers.o" "../freertos/source/timers.c"
Building file: ../freertos/portable/fsl_tickless_systick.c
../source/0322_examen1.c:56:30: warning: pointer targets in initialization differ in signedness [-Wpointer-sign]
 const int8_t * pText_task1 = "Soy la tarea 1\r\n";
                              ^~~~~~~~~~~~~~~~~~~~
../source/0322_examen1.c:57:30: warning: pointer targets in initialization differ in signedness [-Wpointer-sign]
 const int8_t * pText_task2 = "Tarea 2 en ejecución\n";
                              ^~~~~~~~~~~~~~~~~~~~~~~~~
../source/0322_examen1.c: In function 'initial_task':
../source/0322_examen1.c:64:14: error: 'task1' undeclared (first use in this function)
  xTaskCreate(task1, "task1", configMINIMAL_STACK_SIZE, NULL, configMAX_PRIORITIES-2, NULL);
              ^~~~~
../source/0322_examen1.c:64:14: note: each undeclared identifier is reported only once for each function it appears in
../source/0322_examen1.c:65:14: error: 'task2' undeclared (first use in this function)
  xTaskCreate(task2, "task2", configMINIMAL_STACK_SIZE, NULL, configMAX_PRIORITIES-2, NULL);
              ^~~~~
../source/0322_examen1.c:66:14: error: 'task3' undeclared (first use in this function)
  xTaskCreate(task3, "task3", configMINIMAL_STACK_SIZE, NULL, configMAX_PRIORITIES-2, NULL);
              ^~~~~
../source/0322_examen1.c: In function 'task1':
../source/0322_examen1.c:74:2: error: unknown type name 'time_msg_t'
  time_msg_t *message;
  ^~~~~~~~~~
../source/0322_examen1.c: In function 'task2':
../source/0322_examen1.c:90:2: error: unknown type name 'time_msg_t'
  time_msg_t *message;
  ^~~~~~~~~~
../source/0322_examen1.c: In function 'task3':
../source/0322_examen1.c:105:2: error: unknown type name 'time_msg_t'
  time_msg_t *message;
  ^~~~~~~~~~
In file included from C:\sebmii\SEBMII\0322_examen1\freertos\include/semphr.h:77:0,
                 from ../source/0322_examen1.c:46:
../source/0322_examen1.c: In function 'main':
../source/0322_examen1.c:127:34: error: 'time_msg_t' undeclared (first use in this function)
  xQueue = xQueueCreate(3,sizeof( time_msg_t));
                                  ^
C:\sebmii\SEBMII\0322_examen1\freertos\include/queue.h:186:94: note: in definition of macro 'xQueueCreate'
  #define xQueueCreate( uxQueueLength, uxItemSize ) xQueueGenericCreate( ( uxQueueLength ), ( uxItemSize ), ( queueQUEUE_TYPE_BASE ) )
                                                                                              ^~~~~~~~~~
make: *** [source/0322_examen1.o] Error 1
make: *** Waiting for unfinished jobs....
Invoking: MCU C Compiler
arm-none-eabi-gcc -D__REDLIB__ -DPRINTF_FLOAT_ENABLE=0 -D__USE_CMSIS -DCR_INTEGER_PRINTF -DSDK_DEBUGCONSOLE=1 -D__MCUXPRESSO -DDEBUG -DSDK_OS_FREE_RTOS -DFSL_RTOS_FREE_RTOS -DCPU_MK64FN1M0VLL12 -DCPU_MK64FN1M0VLL12_cm4 -I"C:\sebmii\SEBMII\0322_examen1\board" -I"C:\sebmii\SEBMII\0322_examen1\source" -I"C:\sebmii\SEBMII\0322_examen1" -I"C:\sebmii\SEBMII\0322_examen1\freertos\include" -I"C:\sebmii\SEBMII\0322_examen1\freertos\portable" -I"C:\sebmii\SEBMII\0322_examen1\drivers" -I"C:\sebmii\SEBMII\0322_examen1\CMSIS" -I"C:\sebmii\SEBMII\0322_examen1\utilities" -I"C:\sebmii\SEBMII\0322_examen1\startup" -O0 -fno-common -g3 -Wall -c -fmessage-length=0 -mcpu=cortex-m4 -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -D__REDLIB__ -specs=redlib.specs -MMD -MP -MF"freertos/portable/fsl_tickless_systick.d" -MT"freertos/portable/fsl_tickless_systick.o" -MT"freertos/portable/fsl_tickless_systick.d" -o "freertos/portable/fsl_tickless_systick.o" "../freertos/portable/fsl_tickless_systick.c"
Finished building: ../freertos/source/timers.c
 
Finished building: ../freertos/source/tasks.c
 
Finished building: ../freertos/portable/fsl_tickless_systick.c
 

08:56:20 Build Finished (took 1s.108ms)

